// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationHeaderName should render a default component 1`] = `
<div
  className="application-header-name"
/>
`;

exports[`ApplicationHeaderName should render with provided accessory 1`] = `
<div
  className="application-header-name"
>
  <div
    className="accessory"
  >
    <img
      alt="this is the accessory"
    />
  </div>
</div>
`;

exports[`ApplicationHeaderName should render with provided accessory, size, subtitle, and title 1`] = `
<div
  className="application-header-name"
>
  <div
    className="accessory"
  >
    <img
      alt="this is the accessory"
    />
  </div>
</div>
`;

exports[`ApplicationHeaderName should render with provided size 1`] = `
<div
  className="application-header-name"
/>
`;

exports[`ApplicationHeaderName should render with provided subtitle 1`] = `
<div
  className="application-header-name"
/>
`;

exports[`ApplicationHeaderName should render with provided title 1`] = `
<div
  className="application-header-name"
/>
`;
